--- a/Project/Project_C16.ipynb
+++ b/Project/Project_C16.ipynb
@@ -10,7 +10,8 @@
    "source": [
     "#Reading data\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from scipy import stats"
    ]
   },
   {
@@ -85,10 +86,9 @@
    "outputs": [],
    "source": [
     "def BestMaakond(data):\n",
-    "    result = findMaakond(data,[])\n",
-    "    result = result.sort_values(by=\"Keskmine\",ascending=False).head(10)\n",
+    "    result = data.sort_values(by=\"Keskmine\",ascending=False).head(10)\n",
     "    result.index = np.arange(1, len(result) + 1)\n",
-    "    print(result[[\"Maakond\",\"Keskmine\"]])"
+    "    return result[[\"Maakond\",\"Keskmine\"]]"
    ]
   },
   {
@@ -98,10 +98,9 @@
    "outputs": [],
    "source": [
     "def BestSchool(data):\n",
-    "    result = find(data,[])\n",
-    "    result = result.sort_values(by=\"Keskmine\",ascending=False).head(10)\n",
+    "    result = data.sort_values(by=\"Keskmine\",ascending=False).head(10)\n",
     "    result.index = np.arange(1, len(result) + 1)\n",
-    "    print(result[[\"Õppeasutus\",\"Keskmine\"]])"
+    "    return result[[\"Õppeasutus\",\"Keskmine\"]]"
    ]
   },
   {
@@ -157,7 +156,9 @@
     "Est2018 = Est2018.drop(\"Max võimalik pallide arv\",axis=1)\n",
     "Est2018 = Est2018.drop(Est2018.columns[10:],axis=1)\n",
     "\n",
-    "makeFloats(Est2018)\n"
+    "makeFloats(Est2018)\n",
+    "Est2018_Koolid = find(Est2018,[])\n",
+    "Est2018_Maakonnad = findMaakond(Est2018,[])"
    ]
   },
   {
@@ -176,7 +177,9 @@
     "Est2019 = Est2019.drop(\"Max võimalik pallide arv\",axis=1)\n",
     "Est2019 = Est2019.drop(Est2019.columns[10:],axis=1)\n",
     "\n",
-    "makeFloats(Est2019)\n"
+    "makeFloats(Est2019)\n",
+    "Est2019_Koolid = find(Est2019,[])\n",
+    "Est2019_Maakonnad = findMaakond(Est2019,[])"
    ]
   },
   {
@@ -195,7 +198,9 @@
     "Est2020 = Est2020.drop(\"Max võimalik pallide arv\",axis=1)\n",
     "Est2020 = Est2020.drop(Est2020.columns[10:],axis=1)\n",
     "\n",
-    "makeFloats(Est2020)\n"
+    "makeFloats(Est2020)\n",
+    "Est2020_Koolid = find(Est2020,[])\n",
+    "Est2020_Maakonnad = findMaakond(Est2020,[])"
    ]
   },
   {
@@ -214,7 +219,9 @@
     "Math2018A = Math2018A.drop(\"Max võimalik pallide arv\",axis=1)\n",
     "Math2018A = Math2018A.drop(Math2018A.columns[10:],axis=1)\n",
     "\n",
-    "makeFloats(Math2018A)\n"
+    "makeFloats(Math2018A)\n",
+    "Math2018A_Koolid = find(Math2018A,[])\n",
+    "Math2018A_Maakonnad = findMaakond(Math2018A,[])"
    ]
   },
   {
@@ -233,7 +240,9 @@
     "Math2019A = Math2019A.drop(\"Max võimalik pallide arv\",axis=1)\n",
     "Math2019A = Math2019A.drop(Math2019A.columns[10:],axis=1)\n",
     "\n",
-    "makeFloats(Math2019A)\n"
+    "makeFloats(Math2019A)\n",
+    "Math2019A_Koolid = find(Math2019A,[])\n",
+    "Math2019A_Maakonnad = findMaakond(Math2019A,[])"
    ]
   },
   {
@@ -252,7 +261,9 @@
     "Math2020A = Math2020A.drop(\"Max võimalik pallide arv\",axis=1)\n",
     "Math2020A = Math2020A.drop(Math2020A.columns[10:],axis=1)\n",
     "\n",
-    "makeFloats(Math2020A)\n"
+    "makeFloats(Math2020A)\n",
+    "Math2020A_Koolid = find(Math2020A,[])\n",
+    "Math2020A_Maakonnad = findMaakond(Math2020A,[])"
    ]
   },
   {
@@ -271,7 +282,9 @@
     "Math2018 = Math2018.drop(\"Max võimalik pallide arv\",axis=1)\n",
     "Math2018 = Math2018.drop(Math2018.columns[10:],axis=1)\n",
     "\n",
-    "makeFloats(Math2018)\n"
+    "makeFloats(Math2018)\n",
+    "Math2018_Koolid = find(Math2018,[])\n",
+    "Math2018_Maakonnad = findMaakond(Math2018,[])"
    ]
   },
   {
@@ -290,7 +303,9 @@
     "Math2019 = Math2019.drop(\"Max võimalik pallide arv\",axis=1)\n",
     "Math2019 = Math2019.drop(Math2019.columns[10:],axis=1)\n",
     "\n",
-    "makeFloats(Math2019)\n"
+    "makeFloats(Math2019)\n",
+    "Math2019_Koolid = find(Math2019,[])\n",
+    "Math2019_Maakonnad = findMaakond(Math2019,[])"
    ]
   },
   {
@@ -310,7 +325,8 @@
     "Math2020 = Math2020.drop(Math2020.columns[10:],axis=1)\n",
     "\n",
     "makeFloats(Math2020)\n",
-    "\n"
+    "Math2020_Koolid = find(Math2020,[])\n",
+    "Math2020_Maakonnad = findMaakond(Math2020,[])"
    ]
   },
   {
@@ -381,8 +397,8 @@
     }
    ],
    "source": [
-    "BestSchool(Est2018)\n",
-    "BestMaakond(Est2018)"
+    "print(BestSchool(Est2018_Koolid))\n",
+    "print(BestMaakond(Est2018_Maakonnad))"
    ]
   },
   {
@@ -426,8 +442,8 @@
     }
    ],
    "source": [
-    "BestSchool(Est2019)\n",
-    "BestMaakond(Est2019)"
+    "print(BestSchool(Est2019_Koolid))\n",
+    "print(BestMaakond(Est2019_Maakonnad))"
    ]
   },
   {
@@ -471,8 +487,8 @@
     }
    ],
    "source": [
-    "BestSchool(Est2020)\n",
-    "BestMaakond(Est2020)"
+    "print(BestSchool(Est2020_Koolid))\n",
+    "print(BestMaakond(Est2020_Maakonnad))"
    ]
   },
   {
@@ -516,8 +532,8 @@
     }
    ],
    "source": [
-    "BestSchool(Math2018A)\n",
-    "BestMaakond(Math2018A)"
+    "print(BestSchool(Math2018A_Koolid))\n",
+    "print(BestMaakond(Math2018A_Maakonnad))"
    ]
   },
   {
@@ -561,8 +577,8 @@
     }
    ],
    "source": [
-    "BestSchool(Math2019A)\n",
-    "BestMaakond(Math2019A)"
+    "print(BestSchool(Math2019A_Koolid))\n",
+    "print(BestMaakond(Math2019A_Maakonnad))"
    ]
   },
   {
@@ -606,8 +622,8 @@
     }
    ],
    "source": [
-    "BestSchool(Math2020A)\n",
-    "BestMaakond(Math2020A)"
+    "print(BestSchool(Math2020A_Koolid))\n",
+    "print(BestMaakond(Math2020A_Maakonnad))"
    ]
   },
   {
@@ -651,8 +667,8 @@
     }
    ],
    "source": [
-    "BestSchool(Math2018)\n",
-    "BestMaakond(Math2018)"
+    "print(BestSchool(Math2018_Koolid))\n",
+    "print(BestMaakond(Math2018_Maakonnad))"
    ]
   },
   {
@@ -696,8 +712,8 @@
     }
    ],
    "source": [
-    "BestSchool(Math2019)\n",
-    "BestMaakond(Math2019)"
+    "print(BestSchool(Math2019_Koolid))\n",
+    "print(BestMaakond(Math2019_Maakonnad))"
    ]
   },
   {
@@ -725,24 +741,24 @@
       "7         Tallinna Humanitaargümnaasium  66.400000\n",
       "8                  Sakala Eragümnaasium  64.200000\n",
       "9                      Kuusalu Keskkool  64.100000\n",
-      "10             Pärnu Koidula Gümnaasium  62.800000\n",
-      "             Maakond   Keskmine\n",
-      "1   Ida-Viru maakond  47.463725\n",
-      "2      Pärnu maakond  45.605921\n",
-      "3     Jõgeva maakond  43.434694\n",
-      "4      Harju maakond  39.612809\n",
-      "5      Tartu maakond  38.034286\n",
-      "6      Põlva maakond  37.537500\n",
-      "7      Lääne maakond  35.768627\n",
-      "8          Määramata  34.166667\n",
-      "9      Saare maakond  33.100000\n",
-      "10  Viljandi maakond  30.802083\n"
+      "10             Pärnu Koidula Gümnaasium  62.800000\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'Math2029_Maakonnad' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-25-c1ea21cc7cf2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBestSchool\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMath2020_Koolid\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBestMaakond\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMath2029_Maakonnad\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'Math2029_Maakonnad' is not defined"
      ]
     }
    ],
    "source": [
-    "BestSchool(Math2020)\n",
-    "BestMaakond(Math2020)"
+    "print(BestSchool(Math2020_Koolid))\n",
+    "print(BestMaakond(Math2029_Maakonnad))"
    ]
   },
   {
@@ -752,7 +768,13 @@
     "id": "syJyXmSU6Xe6"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "est2018 = find(Est2018,[])\n",
+    "est2019 = find(Est2019,[])\n",
+    "eks = est2018[\"Keskmine\"]\n",
+    "eks1 = est2019[\"Keskmine\"]\n",
+    "stats.ttest_ind(eks,eks1)"
+   ]
   },
   {
    "cell_type": "code",
